--- a/src/layouts/HelpPanel/index.module.scss
+++ b/src/layouts/HelpPanel/index.module.scss
@@ -94,4 +94,5 @@
 
 .content {
   padding: 2rem 2.8rem;
+  width: 27.9rem;
 }
