--- a/src/layouts/SideNavigation/index.module.scss
+++ b/src/layouts/SideNavigation/index.module.scss
@@ -33,15 +33,16 @@
 }
 
 .animated {
-  height: 100%;
-  transition: all 0.1s;
   &[data-state='open'] {
     width: 28rem;
     opacity: 1;
+    height: 100%;
+    transition: all 0.1s;
   }
   &[data-state='closed'] {
     width: 8rem;
     opacity: 0;
+    pointer-events: none;
     & .content {
       display: none;
     }
@@ -50,8 +51,7 @@
 
 .content {
   height: 100%;
-  transition: width 0.3s;
-
+  transition: width 0.1s;
   background-color: var(--color-bg-main-drawer);
   border-right: 1px solid var(--color-border-drawer-right);
   box-shadow: 0px 1px 1px 1px #e9ebed, 0px 6px 36px rgba(0, 7, 22, 0.1);
